--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -212,7 +211,7 @@ index.html
     <section class="section" id="constitution">
         <h2>The Economic Constitution</h2>
         <p>The old world built from the top down. Aethelgard builds from the labor up. Our economy is governed by the 60/40 Surplus Protocol, encoded into the Ledger to ensure the worker is never again a line item.</p>
-        
+
         <div class="split-grid">
             <div class="split-card">
                 <span class="split-val">60%</span>
@@ -224,7 +223,7 @@ index.html
                 <span style="color: #fff;">CAPITAL ASSETS</span>
                 <p style="font-size: 0.7rem; color: #666;">Reinvested into ships, solar tech, and lunar outposts.</p>
             </div>
-        </div>
+        <
 
         <div class="constitution-box">
             <strong>PROPOSAL #001: THE VANGUARD</strong><br>
@@ -238,7 +237,7 @@ index.html
         <p style="font-style: italic; color: #aaa;">
             "Aethelgard is the correction. We have turned the plastic killing our seas into the bricks that will house us on the Moon. We have replaced the CEO with a Labor Ledger and the shareholder with the worker. This is not a company; it is a sovereign collective. I am not your boss. I am your first Associate. The Ledger is open."
         </p>
-        <p>— The Founder</p>
+        <p>â€” The Founder</p>
     </section>
 
     <footer class="footer">
